# ledger

./: .gitignore  README.md  pyproject.toml
docs/tex/: p1_phase_locking_program.tex  p5_target_selection_commutator.tex  p6_anisotropy_protocol.tex  p6_structuring_variance_program.tex  pbc_decoherence_draft.bib  pbc_decoherence_draft.tex  pbc_decoherence_final.tex  pbc_refs.bib
scripts/: 01_context_builder.py  02_p1_monte_carlo_audit.py  02_planck_p1_audit.py  02_verify_smica.py  03_desi_p5_audit.py  04_desi_p5_significance.py  05_p5_robustness.py  06_jwst_p6_audit.py  06_jwst_p6_mask_aware.py  06_p6_simulator.py  06_p6_verify.py  07_final_ledger_plot.py  download_desi_p5.sh  download_p1_splits.sh  download_p6_jwst.sh  download_planck.sh  download_planck_p1.sh  generate_mock_data.py  p6_corrected_audit.py  p6_cosmos_audit.py  p6_extract_cosmos_safe.py  p6_final_clean_audit.py  p6_hex_audit.py  p6_hex_null_test.py  p6_lcdm_mock_audit.py  p6_plot_rotation.py  p6_real_data_audit.py  p6_rigorous_sigma.py  p6_rotation_audit.py  run_injection.py
src/pbc/: context.py  dual.py  stats.py
src/pbc/utils/: healpix.py  io.py
tests/science/: test_null.py
